# VisionLongformerForObjectDetection

./: README.md  converter.py  pyproject.toml  train_net.py
msvit4od/: __init__.py  config.py  dataset_mapper.py  linformer.py  longformer2d.py  msvit4od.py  performer.py  slidingchunk_2d.py  srformer.py
notebooks/: inference.ipynb
scripts/: force-cuda11.sh
