[tool.poetry]
name = "msvit4od"
version = "0.1.0"
description = ""
authors = ["Shunsuke KITADA <shunsuke.kitada.0831@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.8"
detectron2 = {url = "https://dl.fbaipublicfiles.com/detectron2/wheels/cu111/torch1.9/detectron2-0.6%2Bcu111-cp38-cp38-linux_x86_64.whl"}
torch = "^1.10.0"
torchvision = "^0.11.1"
timm = "^0.4.12"
einops = "^0.3.2"
scipy = "^1.7.3"
# msvit4od = { git = "https://github.com/shunk031/VisionLongformerForObjectDetection", branch = "main" }

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
flake8 = "^4.0.1"
mypy = "^0.910"
jupyterlab = "^3.2.5"
opencv-python = "^4.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
